--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="{{url_for('static', path='style.css')}}" />
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <meta name="title" content="Bref">
+  <meta name="description" content="simple and powerful link shortener">
+  <meta name="keywords" content="python, link, shortener, powerfull, simple, easy, linkshortener">
+  <meta name="robots" content="noindex, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
   <title>Bref - powerful shortener</title>
 </head>
 
