--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="{{base_url}}/static/style.css" />
+  <link rel="stylesheet" href="/static/style.css" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta name="title" content="Bref">
   <meta name="description" content="simple and powerful link shortener">
